# python-profiler

./: pyproject.toml
profiler/: profile.py
