[tool.poetry]
name = "profiler"
version = "0.1.0"
description = ""
authors = ["Xiubo Zhang <zhangxiubo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
psutil = "^5.8.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
